added geohash drt2yyy0 as the default, and the ability to either specify a geohash or use your current location

--- a/web/app/styles/main.scss
+++ b/web/app/styles/main.scss
@@ -129,6 +129,11 @@ canvas{
     // height: 400px;
 }
 
+.hashinput{
+    width: 200px;
+    margin-bottom: 10px;
+}
+
 #walkCanvas{
     background-color: black;
     height: 100%;
